// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UniRefColumnConfiguration component should render all columns: Cluster ID 1`] = `
<DocumentFragment>
  <a
    href="/uniref/UniRef90_Q28I25"
  >
    UniRef90_Q28I25
  </a>
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render all columns: Cluster name 1`] = `
<DocumentFragment>
  Cluster: CDC7 cell division cycle 7
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render all columns: Common taxon 1`] = `
<DocumentFragment>
  Xenopus tropicalis (Western clawed frog) (Silurana tropicalis)
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render all columns: Common taxon ID 1`] = `
<DocumentFragment>
  <a
    href="/taxonomy/8364"
  >
    8364
  </a>
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render all columns: Identity 1`] = `
<DocumentFragment>
  UniRef90
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render all columns: Last updated 1`] = `<DocumentFragment />`;

exports[`UniRefColumnConfiguration component should render all columns: Length 1`] = `
<DocumentFragment>
  483
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render all columns: Members 1`] = `
<DocumentFragment>
  <ul
    class="no-bullet"
  >
    <li>
      <a
        href="/uniprotkb/Q28I25"
      >
        Q28I25
      </a>
    </li>
    <li>
      <a
        href="/uniprotkb/A0A6I8RXP7"
      >
        A0A6I8RXP7
      </a>
    </li>
    <li>
      <a
        href="/uniprotkb/A0A6I8SV39"
      >
        A0A6I8SV39
      </a>
    </li>
    <li>
      <a
        href="/uniprotkb/A0A6I8QDI3"
      >
        A0A6I8QDI3
      </a>
    </li>
    <li>
      <a
        href="/uniprotkb/A0A6I8QHP6"
      >
        A0A6I8QHP6
      </a>
    </li>
    <li>
      <a
        href="/uniprotkb/B7ZUP5"
      >
        B7ZUP5
      </a>
    </li>
    <li>
      <a
        href="/uniprotkb/UPI0012F6CEF4"
      >
        UPI0012F6CEF4
      </a>
    </li>
    <li>
      <a
        href="/uniprotkb/UPI0012F702BF"
      >
        UPI0012F702BF
      </a>
    </li>
    <li>
      <a
        href="/uniprotkb/UPI0012F66615"
      >
        UPI0012F66615
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render all columns: Organism IDs 1`] = `
<DocumentFragment>
  <ul
    class="no-bullet"
  >
    <li>
      <a
        href="/taxonomy/8364"
      >
        8364
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render all columns: Organisms 1`] = `
<DocumentFragment>
  <ul
    class="no-bullet"
  >
    <li>
      Xenopus tropicalis (Western clawed frog) (Silurana tropicalis)
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render all columns: Reference sequence 1`] = `
<DocumentFragment>
  <span
    class="break-anywhere"
  />
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render all columns: Size 1`] = `
<DocumentFragment>
  9 members
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render all columns: Types 1`] = `
<DocumentFragment>
  <span
    class="entry-title__status icon--uniparc"
    title="This marks a UniParc entry"
  >
    <test-file-stub />
  </span>
  <span
    class="entry-title__status icon--unreviewed"
    title="This marks an unreviewed UniProtKB entry"
  >
    <test-file-stub />
  </span>
</DocumentFragment>
`;
